# human_img_seg

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  docker-stop.sh  predict.sh  pyproject.toml  run_web.sh  train.sh  validate.sh  visualize_dataset.sh
configs/: test_config.yaml  train_config.yaml
notebook/: Project002_image_segmentation.ipynb
scripts/: predict.py  train.py  validate.py  visualize_dataset.py
src/data/: dataset.py
src/models/: model.py
src/utils/: device.py  visualization.py
tests/test_data/: test_data.py
web/api/: main.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
