[tool.poetry]
name = "human-img-seg"
version = "0.1.0"
description = "Using pre-trained pytorch model to segment out humans from backgrounds in images"
authors = ["benintw <chen.ben968@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }, {include="web"}]

[tool.poetry.dependencies]
python = ">=3.11"

numpy = ">=1.23.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = ">=2.6.0,<3.0.0"
torchvision = ">=0.21.0,<0.22.0"
matplotlib = ">=3.10.0,<4.0.0"
icecream = ">=2.1.4,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
segmentation-models-pytorch = ">=0.4.0,<0.5.0"
optree = ">=0.13.0"
pytest = "^8.3.4"
albumentations = "^2.0.4"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
